--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -1028,10 +1028,17 @@ function render(desc = 0) {
     tbody.appendChild(tr);
   });
 
-  const { subtotal, descuento, impuestos, total } = calcularTotales(desc);
-  $("#lblSubtotal").textContent = money(subtotal);
-  $("#lblImpuestos").textContent = money(impuestos);
-  $("#lblTotal").textContent = money(total);
+const { subtotal, descuento, impuestos, total } = calcularTotales(desc);
+
+$("#lblSubtotal").textContent = money(subtotal);
+$("#lblImpuestos").textContent = money(impuestos);
+$("#lblTotal").textContent = money(total);
+
+if (descuento > 0) {
+  descuentoInfo.textContent = `Descuento aplicado: ${money(descuento)}`;
+  descuentoInfo.style.display = "block";
+} else {
+  descuentoInfo.textContent = "Descuento aplicado: $0.00";
 }
 
 /* ===========================================================
@@ -1497,6 +1504,8 @@ $("#btnSolicitarDescuento").addEventListener("click", async () => {
   localStorage.setItem("desc_porcentaje", porc);
 
   const tot = calcularTotales(porc);
+  descuentoInfo.textContent = `Descuento aplicado: ${money(tot.descuento)}`;
+descuentoInfo.style.display = "block";
 
   cobroTotal.textContent = money(tot.total);
   descuentoResumen.textContent = money(tot.descuento);
