--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
   <div class="apps">
    <a href="POSVTA4/RECORTES.html"> RECORTES </a>
   </div>
+<div class="apps">
+   <a href="POSVTA4/CATACOMIS.html"> ASIGNACION COMISION TABLA </a>
+  </div>  
     Powered by <b>PROVSOFT</b>
   </footer>
 </body>
